--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "tests/cpp-tests/Resources/ccs-res"]
         path = tests/cpp-tests/Resources/ccs-res
         url = git://github.com/dumganhar/ccs-res.git
+[submodule "cocos2d-x-3rd-party-libs-bin"]
+        path = cocos2d-x-3rd-party-libs-bin
+        url = git://github.com/Neurochrom/cocos2d-x-3rd-party-libs-bin
